force-app/main/default/objects/Warranty_Contact_Role__c/Warranty_Contact_Role__c.object-meta.xml
<CustomObject>
    <description>A junction object used to link the warranties and the contact responsible for those warranties.</description>
    <label>Warranty Contact Role</label>
    <nameField>
        <displayFormat>WCR-{000000000}</displayFormat>
        <label>Warranty Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warranty Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>