force-app/main/default/objects/Warranty_Contact_Role__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>used to indicate which contact is associated with the warranty contact role.</description>
    <inlineHelpText>used to indicate which contact is associated with the warranty contact role.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Warranty Contact Roles</relationshipLabel>
    <relationshipName>Warranty_Contact_Roles</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>