force-app/main/default/objects/Warranty_Contact_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>used to indicate the specific role that the contact plays in relation to the warranty.</description>
    <inlineHelpText>used to indicate the specific role that the contact plays in relation to the warranty.</inlineHelpText>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Approver</fullName>
            </value>
            <value>
                <fullName>Authorize Claim</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Legal Representative</fullName>
            </value>
            <value>
                <fullName>Logistics Coordinator</fullName>
            </value>
            <value>
                <fullName>Marketing Coordinator</fullName>
            </value>
            <value>
                <fullName>Quality Control</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
            <value>
                <fullName>Service Technician</fullName>
            </value>
            <value>
                <fullName>Technical Support</fullName>
            </value>
            <value>
                <fullName>Warranty Administrator</fullName>
            </value>
            <value>
                <fullName>Warranty Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>