force-app/main/default/objects/Warranty_Contact_Role__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>used to indicate the start date of the contact role in relation to the warranty.</description>
    <inlineHelpText>used to indicate the start date of the contact role in relation to the warranty.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>