force-app/main/default/objects/Warranty_Contact_Role__c/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <description>used to indicate which warranty the warranty contact role is associated with.</description>
    <inlineHelpText>used to indicate which warranty the warranty contact role is associated with.</inlineHelpText>
    <label>Warranty</label>
    <referenceTo>Warranty__c</referenceTo>
    <relationshipLabel>Warranty Contact Roles</relationshipLabel>
    <relationshipName>Warranty_Contact_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>